unpackaged/objects/copado__Theme__c.object
<CustomObject>
	<description>A theme is a group of user stories which contribute to a common goal. It is the highest level of the user story hierarchy. On the other hand, an epic is a big user story that has to be divided into several user stories because it can&apos;t be completed within one sprint.</description>
	<fields>
		<fullName>copado__Active__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Active</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__Status__c</fullName>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Draft</fullName>
				</value>
				<value>
					<fullName>Planned</fullName>
				</value>
				<value>
					<fullName>In Progress</fullName>
				</value>
				<value>
					<fullName>Completed</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Theme_Details__c</fullName>
		<label>Theme Details</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<label>Theme</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Active__c</columns>
		<columns>copado__Status__c</columns>
		<columns>OWNER.FIRST_NAME</columns>
		<columns>copado__Theme_Details__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
		<language>en_US</language>
	</listViews>
	<nameField>
		<label>Theme Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Themes</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>